<resources>
    <string name="app_name">طير</string>
    <string name="appLang_ar">لغة التطبيق </string>
    <string name="details_ar">يرجى إختيار لغة التطبيق ما بين الخيارات المتاحة</string>
    <string name="Arabiclang">عربى</string>
    <string name="EnglishLang">انجليزى</string>
    <string name="Next">التالى</string>
    <string name="Login">تسجيل الدخول</string>
    <string name="WelcomeLogin">اهلا بك مرة اخرى سجل دخولك</string>
    <string name="PhoneNum">رقم الهاتف</string>
    <string name="ForgotPass">هل نسيت كلمة المرور؟</string>
    <string name="NowOrders">الطلبات الحالية</string>
    <string name="HintPassword">كلمة المرور</string>
    <string name="Main">الرئيسية</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="PersonalData">البيانات الشخصية</string>
    <string name="ContactUs">تواصل معنا</string>
    <string name="changePassword">تغير كلمة المرور</string>
    <string name="Logo">غلاف</string>
    <string name="OrderList">سجل الطلبات</string>
    <string name="Terms">شروط الخدمة والخصوصية</string>
    <string name="changeLanguage">تغير اللغة</string>
    <string name="Bell">التنبيهات</string>
    <string name="SendtoUs">إرسل إلينا إقتراحك وشكوتك إن وجد</string>
    <string name="MessageTitle">عنوان الرسالة</string>
    <string name="Send">ارسال</string>
    <string name="CanotChangePass">لا استطيع تغير كلمه المرور</string>
    <string name="MenuHead">لوجو</string>
    <string name="TermTitles">عنوان القسم</string>
    <string name="Termdiscraption">كان لورم اوبسم هو النص الوهمي القياسي في الصناعة منذ القرن الخامس عشر الميلادي ، عندما أخذت الطابعة غير المعروفة مجموعة من الألوان كان لورم اوبسم هو الدمية القياسية في الصناعة ، عندما أخذت الطابعة غير المعروفة لوحًا من الكتابة ، كان لورم اوبسم هو النص الدمية القياسي في هذه الصناعة منذ القرن الخامس عشر</string>
    <string name="EditData">يمكنك تعديل بياناتك بإدخال البيانات التالية</string>
    <string name="FirstName">الإسم الأول</string>
    <string name="HintFName">طارق</string>
    <string name="LastName">الأسم الاخير</string>
    <string name="HintLName">محمد</string>
    <string name="EmailLabel">البريد الإلكتروني</string>
    <string name="EmailValue">tare@fudex.com.sa</string>
    <string name="PhoneNumLabel">رقم الهاتف</string>
    <string name="PhoneNumValue">01117135734</string>
    <string name="Save">حفظ</string>
    <string name="EnterCorrectData">يجب ملئ البياتات صحيحه</string>
    <string name="EnterOldPassword">كلمة المرور القديمة</string>
    <string name="PasswordValue">123456</string>
    <string name="HintNewPassword">كلمة المرور الجديدة</string>
    <string name="HintRepatePassword">اعد كلمة المرور</string>
    <string name="LanguageDetails">يرجى إختيار لغة التطبيق ما بين الخيارات المتاحة</string>
    <string name="Arabic">العربية</string>
    <string name="English">الانجليزية</string>
    <string name="Select">اختر</string>
    <string name="SelectDate">اختر تاريخ</string>
    <string name="dashboard_image">DashBoard_image</string>
    <string name="NewDashBoard">جديد</string>
    <string name="ReturnedDashBoard">المسترجع</string>
    <string name="DeliviredDashBoard">تم تسليمه</string>
    <string name="InTrackDashBoard">قيد التسليم</string>
    <string name="OrdersOfDay">لا يوجد طلبات في هذا اليوم</string>
    <string name="selectdateorder">SelectDateOrder</string>
    <string name="sunlogo">SunLogo</string>
</resources>