<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/maskone"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Logo"
        app:layout_constraintBottom_toTopOf="@+id/dashBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646"
        app:srcCompat="@mipmap/group_icon" />

    <Button
        android:id="@+id/changeLanguage"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableLeft="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableEnd="@drawable/ic_038___global_language"
        android:drawableRight="@drawable/ic_038___global_language"
        android:text="@string/changeLanguage"
        app:layout_constraintBottom_toTopOf="@+id/changePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginBottom="27dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableLeft="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableEnd="@drawable/ic_password"
        android:drawableRight="@drawable/ic_password"
        android:text="@string/changePassword"
        app:layout_constraintBottom_toTopOf="@+id/contactUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/terms"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginBottom="29dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableLeft="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableEnd="@drawable/ic_contract"
        android:drawableRight="@drawable/ic_contract"
        android:text="@string/Terms"
        app:layout_constraintBottom_toTopOf="@+id/changeLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/orderList"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableLeft="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableEnd="@drawable/ic_review"
        android:drawableRight="@drawable/ic_review"
        android:text="@string/OrderList"
        app:layout_constraintBottom_toTopOf="@+id/personalData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <Button
        android:id="@+id/personalData"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableLeft="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableEnd="@drawable/ic_user"
        android:drawableRight="@drawable/ic_user"
        android:text="@string/PersonalData"
        app:layout_constraintBottom_toTopOf="@+id/terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881" />

    <Button
        android:id="@+id/dashBoard"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableLeft="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableEnd="@drawable/ic_menu"
        android:drawableRight="@drawable/ic_menu"
        android:text="@string/Main"
        app:layout_constraintBottom_toTopOf="@+id/orderList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <Button
        android:id="@+id/contactUs"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableLeft="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableEnd="@drawable/ic_xmlid_1300_"
        android:drawableRight="@drawable/ic_xmlid_1300_"
        android:text="@string/ContactUs"
        app:layout_constraintBottom_toTopOf="@+id/logOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:text="@string/logout"
        android:background="#00000000"
        android:drawableLeft="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableRight="@drawable/ic_share_1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        android:drawableStart="@drawable/ic_iconmonstr_angel_left_thin"
        android:drawableEnd="@drawable/ic_share_1_" />

</androidx.constraintlayout.widget.ConstraintLayout>